2012-07-19  Roland Levillain  <roland@lrde.epita.fr>

	Remove references to mln/morpho/meyer_wst.hh in mln/morpho/.

	* mln/morpho/all.hh,
	* mln/morpho/essential.hh:
	Here.

2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Replace uses morpho::meyer_wst by morpho::watershed::flooding.

	* apps/mesh-segm-skel/mesh-complex-max-curv-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-segm.cc:
	Here.
	* tests/morpho/artificial_line_graph_image_wst.cc,
	* tests/morpho/graph_image_wst.cc,
	* tests/morpho/lena_line_graph_image_wst1.cc,
	* tests/morpho/lena_line_graph_image_wst2.cc:
	Likewise.
	Tidy headers inclusions.
	* mln/make/region_adjacency_graph.hh: Adjust documentation.
	* tests/morpho/graph_image_morpho.cc: Add a comment.

2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Fix tests/core/image/line_graph_image.cc.

	* tests/core/image/line_graph_image.cc: Actually use an image
	based on the edges of a graph, not on its vertices.
	Adjust test.
	Aesthetic changes.
	* tests/core/image/edge_image.cc: Aesthetic changes.

2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Use mln::edge_image to implement line graph images in morpho tests.

	* tests/morpho/line_graph_image_morpho.cc,
	* tests/morpho/line_graph_image_wst.cc:
	Here, instead of mln::vertex_image based on an
	mln::util::line_graph adapter.
	Aesthetic changes.

2013-03-04  Roland Levillain  <roland@lrde.epita.fr>

	Address more compiler warnings.

	* mln/canvas/labeling/generic.hh,
	* mln/canvas/labeling/sorted.hh,
	* mln/canvas/labeling/video.hh,
	* apps/papers/levillain.09.ismm/classif-graph.cc:
	Remove unused variables.
	* mln/morpho/reconstruction/by_erosion/union_find.hh:
	Ignore unused variables.
	* mln/morpho/reconstruction/by_dilation/union_find.hh:
	Style adjustment.

2013-03-04  Roland Levillain  <roland@lrde.epita.fr>

	Fix apps/morphers/Makefile.am.

	* apps/morphers/Makefile.am: Include
	$(top_srcdir)/milena/common.mk.

2011-11-16  Guillaume Lazzara  <z@lrde.epita.fr>
